--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@ body {
 <p><b>Datos de educación:</b><br>
 Universitario: Licenciatura en química en la Universidad Nacional de Panamá.
 <br>Media y Pre-media: Colegio Cristiano El Buen Pastor</p>
-<p><b>Redes sociales:</b>
+<p><b>Contactos de redes sociales:</b>
+<li>Correo electr&oacute;nico: <address>
+<a href="mailto:Japhet24@hotmail.com"> Japhet24@hotmail.com </a> </address></li>
 
+<li>Instagram: <br><a href="https://www.instagram.com/japhet.ruizl/?hl=es-la">@japhet.ruizl</a></li>
 
 
 
