--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@ body {
 <body>
 <p><b>Datos de educación:</b><br>
 Universitario: Licenciatura en química en la Universidad Nacional de Panamá.
-<br>Media y Pre-media: Colegio Cristiano El Buen Pastor</p>
+<br>Media y Pre-media: Colegio Cristiano El Buen Pastor<br>
+  Primaria y kinder: Centro basico general Estado de Israel</p>
+
 <p><b>Contactos de redes sociales:</b>
 <li>Correo electr&oacute;nico: <address>
 <a href="mailto:Japhet24@hotmail.com"> Japhet24@hotmail.com </a> </address></li>
 
 <li>Instagram: <br><a href="https://www.instagram.com/japhet.ruizl/?hl=es-la">@japhet.ruizl</a></li>
-
+<li>Facebook: <br> <a href="https://www.facebook.com/japhet.ruiz.12">Japhet Ruiz</a></li>
 
 
 </body>
